Fix misalignment of buttons on dashboard
There's an override in fruitsalad for this.  I copied it to bigpicture.
Eventually we should clean up our css to make things like this more
consistent across themes.

--- a/esp/esp/themes/theme_data/bigpicture/less/main.less
+++ b/esp/esp/themes/theme_data/bigpicture/less/main.less
@@ -256,3 +256,11 @@ div.nav-collapse.collapse {
   color: red;
   display: inline-block;
 }
+
+/* copied from fruitsalad, but with #main instead of #content.
+   TODO(benkraft): something less theme-specific for things like this. */
+#main form {
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
